[gd_scene format=3 uid="uid://yi2f5p61t3oc"]

[ext_resource type="Script" uid="uid://cj2difunpfdbi" path="res://src/ui/simple_dialog/simple_dialog_area.gd" id="1_gd1k2"]
[ext_resource type="Texture2D" uid="uid://c04lgqt7h1r7h" path="res://assets/ui/input/KeyE.png" id="2_s5ynp"]

[node name="DialogArea" type="Area2D" unique_id=689924629]
process_mode = 3
collision_layer = 0
collision_mask = 4
script = ExtResource("1_gd1k2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1559650857]

[node name="KeyHint" type="TextureRect" parent="." unique_id=316488180]
light_mask = 4
z_index = 3
offset_right = 13.0
offset_bottom = 13.0
texture = ExtResource("2_s5ynp")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="ready" from="." to="." method="_on_ready"]
